--- a/package.json
+++ b/package.json
@@ -31,12 +31,12 @@
   "devDependencies": {
     "@htmlacademy/editorconfig-cli": "3.0.0",
     "@linthtml/linthtml": "0.9.6",
-    "browser-sync": "3.0.2",
+    "browser-sync": "^3.0.4",
     "browserslist-to-esbuild": "2.1.1",
     "eslint": "8.57.0",
     "eslint-config-htmlacademy": "10.0.1",
-    "gulp": "4.0.2",
-    "gulp-esbuild": "0.12.0",
+    "gulp": "^5.0.1",
+    "gulp-esbuild": "^0.14.1",
     "gulp-html-bemlinter": "4.0.0",
     "gulp-htmlmin": "5.0.1",
     "gulp-plumber": "1.2.1",
@@ -44,7 +44,7 @@
     "gulp-sass": "5.1.0",
     "gulp-sharp-responsive": "0.4.1",
     "gulp-stacksvg": "4.0.0",
-    "gulp-svgmin": "4.1.0",
+    "gulp-svgmin": "^4.1.0",
     "linthtml-config-htmlacademy": "1.0.25",
     "npm-run-all": "4.1.5",
     "postcss": "8.4.38",
